// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar Component Search Side Bar Component with available metrics 1`] = `
<div
  className="metrics-search-bar-input"
  data-test-subj="metricsSearch"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
  >
    <div
      className="euiFlexItem euiSearchBar__searchHolder"
    >
      <div
        className="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
            className="euiFieldSearch euiFieldSearch--fullWidth"
            defaultValue=""
            onKeyUp={[Function]}
            placeholder="Search for metrics"
            type="search"
          />
          <div
            className="euiFormControlLayoutIcons"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden={true}
                className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height={16}
                role="img"
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search Bar Component Search Side Bar Component with no available metrics 1`] = `
<div
  className="metrics-search-bar-input"
  data-test-subj="metricsSearch"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
  >
    <div
      className="euiFlexItem euiSearchBar__searchHolder"
    >
      <div
        className="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
            className="euiFieldSearch euiFieldSearch--fullWidth"
            defaultValue=""
            onKeyUp={[Function]}
            placeholder="Search for metrics"
            type="search"
          />
          <div
            className="euiFormControlLayoutIcons"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden={true}
                className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height={16}
                role="img"
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
